--- a/media/css/portal.css
+++ b/media/css/portal.css
@@ -124,7 +124,7 @@ iframe {
 }
 /* logo */
 .logo {
-  width: 155px;
+  width: 255px;
   height: 40px;
   margin: 10px 0 0 10px;
   background: url("../img/geoda-logo.png") no-repeat;
@@ -136,7 +136,7 @@ iframe {
 
 }
 .logo:after {
-  content: "GeoDa";
+  content: "";
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 26px;
   font-weight: bold;
@@ -166,15 +166,8 @@ input.search {
 .header_topright {
   float: right;
   height: 100%;
-  width: 300px;
-  min-width: 300px;
-}
-.account {
-  float: left;
-  width: 90px;
-  margin-top: 13px;
-  padding-left: 13px;
-  background: url("../img/user.png") no-repeat;
+  width: 100px;
+  min-width: 100px;
 }
 #userInfo {
   text-align: left;
@@ -183,15 +176,8 @@ input.search {
   float: left;
   width: 90px;
   margin-top: 13px;
-  padding-left: 16px;
+  padding-left: 8px;
   background: url("../img/basemap.png") no-repeat;
-}
-.publish {
-  float: left;
-  width: 80px;
-  margin-top: 13px;
-  padding-left:8px;
-  background: url("../img/publish.png") no-repeat;
 }
 @media (max-width: 600px)  {
   .logo {width: 40px;}
@@ -211,7 +197,6 @@ input.search {
 }
 
 .intro {
-  margin-top: 20px;
   margin-bottom: 10px;
   font-weight: bold;
 }
@@ -221,13 +206,6 @@ input.search {
   margin: 5px;
 }
 
-
-border: 1px solid #aaa;margin: 1px 10px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  cursor: pointer;
-}
 #dragdrop_div {
   width: 60%;
   padding: 10px;
@@ -239,10 +217,10 @@ border: 1px solid #aaa;margin: 1px 10px;
   border-radius: 5px;
   padding: 25px;
   text-align: center;
-  font: 20pt bold 'Vollkorn';
+  font: 40pt bold 'Vollkorn';
   color: #bbb;
   width: 90%;
-  height: 120px;
+  height: 80px;
   margin-bottom: 10px;
 }
 #dropbox_div {
@@ -298,6 +276,15 @@ border: 1px solid #aaa;margin: 1px 10px;
   -moz-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
   box-shadow: 0px 0 3px rgba(0,0,0,0.25);
   display: none;
+}
+
+.sample {
+  margin: 20px;
+  -moz-border-radius:5px;
+  -webkit-border-radius:5px;
+  -webkit-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
+  box-shadow: 0px 0 3px rgba(0,0,0,0.25);
 }
 /**/
 .ui-dialog {
@@ -486,9 +473,6 @@ border: 1px solid #aaa;margin: 1px 10px;
   border-bottom: 20px solid transparent;
   border-left:10px solid rgb(51,51,51);
 }
-#btnShowTable {
-  margin-left: 10px;
-}
 .blockBtn {
   width: 100%;
   height: 100%;
@@ -631,6 +615,21 @@ border: 1px solid #aaa;margin: 1px 10px;
   cursor: hand;
 }
 
+#legend {
+  position: absolute;
+  right: 10px;
+  top: 160px;
+  opacity: 1.0;
+  background: white;
+}
+
+#mapInfo {
+  position: absolute;
+  right: 10px;
+  top: 80px;
+  opacity: 1.0;
+  background: white;
+}
 
 .novis {
   visibility :hidden;
@@ -869,7 +868,7 @@ img.capacity {
 */
 .gda-prg-bar,
 #btnMultiLayer,
-#tool-menu-arrow, #dialog-arrow, #prgInfo, #legend{
+#tool-menu-arrow, #dialog-arrow, #prgInfo {
   display: none;
 }
 /*PopWindow*/
@@ -1088,11 +1087,34 @@ ul.mvcheckbox li {
 }
 
 ul.mvcheckbox li label {
-  margin-left: ;
+  /*margin-left: ;*/
 }
 ul.mvcheckbox li:hover,
 ul.mvcheckbox li.focus  {
   background-color: lightyellow;
   border: 1px gray solid;
   width: 12em;
+}
+
+#weightsmeta {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 95%;
+}
+
+#weightsmeta td, #custweightsmetaomers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#weightsmeta tr:nth-child(even){background-color: #f2f2f2;}
+
+#weightsmeta tr:hover {background-color: #ddd;}
+
+#weightsmeta th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
 }
